add a geocoding field (leaflet-geocoding plugin)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lf-plugins/leaflet-hash"]
 	path = lf-plugins/leaflet-hash
 	url = https://github.com/mlevans/leaflet-hash.git
+[submodule "lf-plugins/L.GeoSearch"]
+	path = lf-plugins/L.GeoSearch
+	url = https://github.com/smeijer/L.GeoSearch.git
